Code to draw Paddles
Code for the two pong paddles to be drawn to the screen each frame.

--- a/Group 2 Assignment 4/Group 2 Assignment 4.csproj
+++ b/Group 2 Assignment 4/Group 2 Assignment 4.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Raylib-cs" Version="5.0.0" />
+    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+  </ItemGroup>
+
 </Project>
